--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
     "jalali-moment": "^3.3.11",
+    "js-cookie": "^3.0.5",
     "motion": "^12.0.6",
     "next": "14.2.18",
     "react": "^18",
